--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,18 @@
-<h2>Poliwag 🦆</h2>
-<div>
-	You have <b>19</b> days left of your trial. You can gain up to 7 extra days of free access to the FT by exploring more articles,
-	click on a badge below to get started.
-</div>
-<h3>Explore</h3>
-<div>
-	{{#each medals}}
-	<p>{{name}} {{current}}/{{max}}</p>
-	{{/each}}
+<div class="o-grid-container">
+	<div "o-grid-row">
+		<h2>Poliwag 🦆</h2>
+		<div>
+			You have <b>19</b> days left of your trial. You can gain up to 7 extra days of free access to the FT by exploring more
+			articles, click on a badge below to get started.
+		</div>
+		<h3>Explore</h3>
+		<div class="o-grid-row">
+			{{#each medals}}
+			<div class="pw-medal" data-o-grid-colspan="3 M2 L1">
+				<img src="https://s3-eu-west-1.amazonaws.com/hackathon-2017-poliwag/well-read.png" />
+				<p>{{name}} {{current}}/{{max}}</p>
+			</div>
+			{{/each}}
+		</div>
+	</div>
 </div>
