--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
 		<div class="o-grid-row">
 			{{#each medals}}
 			<div class="pw-medal" data-o-grid-colspan="3 M2 L1">
-				<img src="https://s3-eu-west-1.amazonaws.com/hackathon-2017-poliwag/well-read.png" />
+				<img src="{{iconSource}}" />
 				<p>{{name}} {{current}}/{{max}}</p>
 			</div>
 			{{/each}}
