--- a/main.css
+++ b/main.css
@@ -6,3 +6,11 @@ body {
 .pw-medal {
 	text-align: center;
 }
+
+.o-banner {
+	z-index: 1000;
+}
+
+.o-banner__inner {
+	background-color: #9E2F50 !important;
+}
