Prettyfied the icons and took out the pink

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,9 @@
 		<div class="o-grid-row">
 			{{#each medals}}
 			<div class="pw-medal" data-o-grid-colspan="3 M2 L1">
+				<p>{{name}}</p>
 				<img src="{{iconSource}}" />
-				<p>{{name}} {{current}}/{{max}}</p>
+				<p>{{current}}/{{max}}</p>
 			</div>
 			{{/each}}
 		</div>
