--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
   padding-top: 100px;
-  color: #FF0062;
+  color: #33302e;
 }
 
 .pw-medal {
-	text-align: center;
+  text-align: center;
 }
