--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 		<h3>Explore</h3>
 		<div class="o-grid-row">
 			{{#each medals}}
-			<div class="pw-medal" data-o-grid-colspan="3 M2 L1">
+			<div class="pw-medal" data-o-grid-colspan="3 M2 L1" onclick="window.location = '/myft/explore?award={{name}}'">
 				<p>{{name}}</p>
 				<img src="{{iconSource}}" />
 				<p>{{current}}/{{max}}</p>
