hide the myFT stuff so we don't get a flash of it before we load our stuff

--- a/main.css
+++ b/main.css
@@ -15,3 +15,7 @@ body {
 .o-banner__inner {
 	background-color: #9E2F50 !important;
 }
+
+.topic-search, .myft-toolbar, .myft__dashboard, .myft__recommendation {
+	display: none !important;
+}
