--- a/main.css
+++ b/main.css
@@ -21,7 +21,9 @@
 }
 
 .progress-container-container {
-	position: relative
+	position: relative;
+	width: 200px;
+	margin: auto;
 }
 
 .progress-container {
@@ -39,4 +41,8 @@
 	height: 3px;
 	left: 0;
 	background-color: #9E2F50;
+}
+
+.centre-img {
+	text-align: center;
 }
