--- a/views/award.hbs
+++ b/views/award.hbs
@@ -1,5 +1,5 @@
 <div class="o-grid-container polywag">
-	<div class="o-grid-row centre-img">
+	<div class="centre-img">
 			<br>
 		{{#with award}}
 		<img src="{{iconSource}}"/>
