--- a/views/award.hbs
+++ b/views/award.hbs
@@ -12,9 +12,13 @@
 			<div class='progress' style='right:{{percentRemaining}}%;'></div>
 		</div>
 
-		<div>
-			{{description}}
-		</div>
+<br/>
+		<p>Reading {{max}} articles will unlock the Well Read badge and give you an extra day of free full access to FT content. Enjoy reading!</p>
 		{{/with}}
+
+		<br/>
+		<a href="/world/uk" class="o-buttons o-buttons--primary o-buttons--big">
+			Explore more content
+		</a>
 	</div>
 </div>
